# model-ghdl

./: .gitignore  CMakeLists.txt  README.md  gui.c  gui.h  main.c
arch/: PKGBUILD  README.md
build-vcom-Desktop-Release/: Makefile  vcom
vcom/: main.cpp  vcom.pro
vsim/: main.cpp  vsim.pro
